#9 Concolidated enum TicketPriorityEscalateEvent

--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
@@ -92,14 +92,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetChangedOwner()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetChangedOwner()
   type: Method
-  summary: "\n<ul><li>Enum: -1 = None</li><li>Enum: 0 = Stop</li><li>Enum: 1 = Continue</li><li>Enum: 2 = Restart</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetChangedOwner()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: indicates what to do with the escalation chain when the request changes owner (manually)
+      description: What to do with the escalation chain when the request changes owner (manually). See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger changedOwner = thing.GetChangedOwner();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetDeadline()
@@ -432,14 +432,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetTicketChangedPriority()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketChangedPriority()
   type: Method
-  summary: "\n<ul><li>Enum: -1 = None</li><li>Enum: 0 = Stop</li><li>Enum: 1 = Continue</li><li>Enum: 2 = Restart</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTicketChangedPriority()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: indicates what to do with the escalation chain when the request is changed into this priority
+      description: What to do with the escalation chain when the request is changed into this priority. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketChangedPriority = thing.GetTicketChangedPriority();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketClosed()
@@ -452,14 +452,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetTicketClosed()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketClosed()
   type: Method
-  summary: "\n<ul><li>Enum: -1 = None</li><li>Enum: 0 = Stop</li><li>Enum: 1 = Continue</li><li>Enum: 2 = Restart</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTicketClosed()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: indicates what to do with the escalation chain when the request is closed
+      description: indicates what to do with the escalation chain when the request is closed. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketClosed = thing.GetTicketClosed();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketNew()
@@ -472,14 +472,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetTicketNew()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketNew()
   type: Method
-  summary: "\n<ul><li>Enum: -1 = None</li><li>Enum: 0 = Stop</li><li>Enum: 1 = Continue</li><li>Enum: 2 = Restart</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTicketNew()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when a new request is registered
+      description: What to do with the escalation chain when a new request is registered. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketNew = thing.GetTicketNew();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketNewinfo()
@@ -492,14 +492,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetTicketNewinfo()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketNewinfo()
   type: Method
-  summary: "\n<ul><li>Enum: -1 = None</li><li>Enum: 0 = Stop</li><li>Enum: 1 = Continue</li><li>Enum: 2 = Restart</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTicketNewinfo()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request gets new info
+      description: What to do with the escalation chain when the request gets new info. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketNewinfo = thing.GetTicketNewinfo();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketPriorityId()
@@ -532,14 +532,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetTicketRead()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetTicketRead()
   type: Method
-  summary: "\n<ul><li>Enum: -1 = None</li><li>Enum: 0 = Stop</li><li>Enum: 1 = Continue</li><li>Enum: 2 = Restart</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetTicketRead()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request is read
+      description: What to do with the escalation chain when the request is read. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger ticketRead = thing.GetTicketRead();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetTueStart()
@@ -639,7 +639,7 @@ items:
     parameters:
     - id: changedOwner
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request changes owner (manually). See enum changedOwner. 
+      description: What to do with the escalation chain when the request changes owner (manually). See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1013,7 +1013,7 @@ items:
     parameters:
     - id: ticketChangedPriority
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request is changed into this priority. See enum ticketChangedPriority.
+      description: Indicates what to do with the escalation chain when the request is changed into this priority. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1035,7 +1035,7 @@ items:
     parameters:
     - id: ticketClosed
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request is closed. See enum ticketClosed. 
+      description: Indicates what to do with the escalation chain when the request is closed. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1057,7 +1057,7 @@ items:
     parameters:
     - id: ticketNew
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when a new request is registered. See enum ticketNew.
+      description: Indicates what to do with the escalation chain when a new request is registered. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1079,7 +1079,7 @@ items:
     parameters:
     - id: ticketNewinfo
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request gets new info. See enum ticketNewinfo.
+      description: Indicates what to do with the escalation chain when the request gets new info. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1123,7 +1123,7 @@ items:
     parameters:
     - id: ticketRead
       type: CRMScript.Global.Integer
-      description: Indicates what to do with the escalation chain when the request is read. See enum ticketRead.
+      description: What to do with the escalation chain when the request is read. See <xref href=\"TicketPriorityEscalateEvent\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1255,12 +1255,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.DateTime
-  commentId: T:CRMScript.Global.DateTime
-  isExternal: true
-  name: DateTime
-  nameWithType: DateTime
-  fullName: CRMScript.Global.DateTime
 - uid: CRMScript.NetServer.ChatSessionFlags
   commentId: T:CRMScript.NetServer.ChatSessionFlags
   isExternal: true
@@ -1273,3 +1267,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.TicketPriorityEscalateEvent
+  commentId: T:CRMScript.NetServer.TicketPriorityEscalateEvent
+  isExternal: true
+  name: TicketPriorityEscalateEvent
+  nameWithType: TicketPriorityEscalateEvent
+  fullName: CRMScript.NetServer.TicketPriorityEscalateEvent
