--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -22,7 +22,6 @@ items:
   - CRMScript.NetServer.BookingType
   - CRMScript.NetServer.calReplyStatus
   - CRMScript.NetServer.AppointmentCautionWarning
-  - CRMScript.NetServer.changedOwner
   - CRMScript.NetServer.ChatMessageType
   - CRMScript.NetServer.ChatMessageSpecialType
   - CRMScript.NetServer.ChatSessionFlags
@@ -465,11 +464,7 @@ items:
   - CRMScript.NetServer.TaskType
   - CRMScript.NetServer.TicketBaseStatus
   - CRMScript.NetServer.TicketCategoryClosingStatus
-  - CRMScript.NetServer.ticketChangedPriority
-  - CRMScript.NetServer.ticketClosed
-  - CRMScript.NetServer.ticketNew
-  - CRMScript.NetServer.ticketNewinfo
-  - CRMScript.NetServer.ticketRead
+  - CRMScript.NetServer.TicketPriorityEscalateEvent
   - CRMScript.NetServer.timeCounter
   - CRMScript.NetServer.UDefFieldType
   - CRMScript.NetServer.UDefType
@@ -3083,42 +3078,12 @@ references:
   name: NSTicketPriorityEntity
   nameWithType: NSTicketPriorityEntity
   fullName: CRMScript.NetServer.NSTicketPriorityEntity
-- uid: CRMScript.NetServer.changedOwner
-  commentId: T:CRMScript.NetServer.changedOwner
+- uid: CRMScript.NetServer.TicketPriorityEscalateEvent
+  commentId: T:CRMScript.NetServer.TicketPriorityEscalateEvent
   isExternal: true
-  name: changedOwner
-  nameWithType: changedOwner
-  fullName: CRMScript.NetServer.changedOwner
-- uid: CRMScript.NetServer.ticketChangedPriority
-  commentId: T:CRMScript.NetServer.ticketChangedPriority
-  isExternal: true
-  name: ticketChangedPriority
-  nameWithType: ticketChangedPriority
-  fullName: CRMScript.NetServer.ticketChangedPriority
-- uid: CRMScript.NetServer.ticketClosed
-  commentId: T:CRMScript.NetServer.ticketClosed
-  isExternal: true
-  name: ticketClosed
-  nameWithType: ticketClosed
-  fullName: CRMScript.NetServer.ticketClosed
-- uid: CRMScript.NetServer.ticketNew
-  commentId: T:CRMScript.NetServer.ticketNew
-  isExternal: true
-  name: ticketNew
-  nameWithType: ticketNew
-  fullName: CRMScript.NetServer.ticketNew
-- uid: CRMScript.NetServer.ticketNewinfo
-  commentId: T:CRMScript.NetServer.ticketNewinfo
-  isExternal: true
-  name: ticketNewinfo
-  nameWithType: ticketNewinfo
-  fullName: CRMScript.NetServer.ticketNewinfo
-- uid: CRMScript.NetServer.ticketRead
-  commentId: T:CRMScript.NetServer.ticketRead
-  isExternal: true
-  name: ticketRead
-  nameWithType: ticketRead
-  fullName: CRMScript.NetServer.ticketRead
+  name: TicketPriorityEscalateEvent
+  nameWithType: TicketPriorityEscalateEvent
+  fullName: CRMScript.NetServer.TicketPriorityEscalateEvent
 - uid: CRMScript.NetServer.NSTicketStatusEntity
   commentId: T:CRMScript.NetServer.NSTicketStatusEntity
   isExternal: true
