--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -898,8 +898,6 @@ items:
       href: CRMScript.NetServer.ChatMessageSpecialType.yml
     - name: Enum calReplyStatus
       href: CRMScript.NetServer.calReplyStatus.yml
-    - name: Enum changedOwner
-      href: CRMScript.NetServer.changedOwner.yml
     - name: ChatSessionFlags
       href: CRMScript.NetServer.ChatSessionFlags.yml
     - name: Enum ChatSessionStatus
@@ -1063,16 +1061,8 @@ items:
       href: CRMScript.NetServer.TicketBaseStatus.yml
     - name: TicketCategoryClosingStatus
       href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
-    - name: Enum ticketChangedPriority
-      href: CRMScript.NetServer.ticketChangedPriority.yml
-    - name: Enum ticketClosed
-      href: CRMScript.NetServer.ticketClosed.yml
-    - name: Enum ticketNew
-      href: CRMScript.NetServer.ticketNew.yml
-    - name: Enum ticketNewinfo
-      href: CRMScript.NetServer.ticketNewinfo.yml
-    - name: Enum ticketRead
-      href: CRMScript.NetServer.ticketRead.yml
+    - name: TicketPriorityEscalateEvent
+      href: CRMScript.NetServer.TicketPriorityEscalateEvent.yml
     - name: Enum timeCounter
       href: CRMScript.NetServer.timeCounter.yml
     - name: UDefFieldType
